<resources>
    <string name="app_name">Ajio application Designing</string>
    <string name="searchviewhint">What would you like shop today? </string>
    <string name="button1">MEN</string>
    <string name="textview">SUPER STEALS</string>
    <string name="women">WOMEN</string>
    <string name="button">Button</string>
    <string name="textview6">FLAT
    70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%O        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
v        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF
FF70-80%OFF
        70-80%OFF70-80%OFF
        70-80%OFF70-80%OFF

        70-80%OFF70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF
        70-80%OFF


    </string>
    <string name="textview7">CREAM OF OUR HANDPICKED STYLESCREAM O
        F OUR HANDPICKED STYLESCREAM OF OUR HANDPICKED STYLES
        CREAM OF OUR HANDPICKED STYLES
        CREAM OF OUR HANDPICKED STYLES

        CREAM OF OUR HANDPICKED STYLES
        CREAM OF OUR HANDPICKED STYLES
    CREAM OF OUR HANDPICKED STYLES</string>
    <string name="textview8">NOT JUST IN YOUR DREAMS</string>
    <string name="imageview1">null</string>
    <string name="textvalue9">Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off
    Extra 33% off</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="button3kids">KIDS</string>
    <string name="textview11_blue">textview11_blue</string>
    <string name="textview12_red">textview12_red</string>
</resources>
